--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./src:/var/www
+      - vendor-data:/var/www/vendor
     ports:
       - "8000:80"
     depends_on:
@@ -18,10 +19,8 @@ services:
     container_name: manage-mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: laravel
+      MYSQL_DATABASE: laravel-manage
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     ports:
       - "3306:3306"
     volumes:
@@ -34,6 +33,8 @@ services:
     environment:
       PMA_HOST: db
       PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: 
     ports:
       - "8080:80"
 
@@ -44,4 +45,5 @@ services:
       - "8025:8025"
 
 volumes:
+  vendor-data:
   db-data:
