失敗テスト

--- a/src/.github/workflows/laravel-ci.yml
+++ b/src/.github/workflows/laravel-ci.yml
@@ -2,7 +2,7 @@ name: Laravel CI
 
 on:
   push:
-    branches: [ "test" ]
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
