--- a/src/.github/workflows/laravel-ci.yml
+++ b/src/.github/workflows/laravel-ci.yml
@@ -10,6 +10,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: laravel_test
+        ports:
+          - 3306:3306
+
     steps:
       - uses: actions/checkout@v3
 
@@ -18,8 +27,11 @@ jobs:
         with:
           php-version: '8.2'
 
-      - name: Install dependencies
-        run: composer install --no-progress --prefer-dist
+      - name: Install Composer dependencies
+        run: composer install
 
-      - name: Run tests
+      - name: Prepare .env
+        run: cp .env.example .env && php artisan key:generate
+
+      - name: Run Laravel tests
         run: php artisan test
