--- a/src/.github/workflows/laravel-ci.yml
+++ b/src/.github/workflows/laravel-ci.yml
@@ -26,12 +26,19 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+    
+      - name: Copy .env
+          run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+          working-directory: src
 
       - name: Install Composer dependencies
         run: composer install
+        working-directory: src
 
-      - name: Prepare .env
-        run: cp .env.example .env && php artisan key:generate
-
+      - name: Generate app key
+        run: php artisan key:generate
+        working-directory: src
+      
       - name: Run Laravel tests
         run: php artisan test
+        working-directory: src
