--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,18 +18,24 @@ jobs:
     - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      working-directory: src
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      working-directory: src
     - name: Generate key
       run: php artisan key:generate
+      working-directory: src
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+      working-directory: src
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+        working-directory: src
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
+      working-directory: src
       run: php artisan test
