--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - vendor-data:/var/www/vendor
     ports:
       - "8000:80"
+      - "5173:5173"   # ← Vite dev server
     depends_on:
       - db
       - mailhog
@@ -17,7 +18,6 @@ services:
   db:
     image: mysql:8.0
     container_name: manage-mysql
-    restart: always
     environment:
       MYSQL_DATABASE: laravel-manage
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
@@ -29,7 +29,6 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: manage-phpmyadmin
-    restart: always
     environment:
       PMA_HOST: db
       PMA_PORT: 3306
