--- a/src/.env.example
+++ b/src/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_HOST=0.0.0.0
+VITE_PORT=5173
+VITE_ORIGIN=http://localhost:5173
